# redesigned-spork

./: CMakeLists.txt  DESCRIPTION  NAMESPACE  Org.OpenAPITools.sln  README.md  api_administration.go  api_jobs.go  api_queries.go  api_record_revisions.go  api_sites.go  api_studies.go  build.gradle  configuration.go  index.html  model_components_schemas_interval_forms_item.go  model_components_schemas_record_create_request_item.go  model_form.go  model_form_list.go  model_inline_object_1.go  model_inline_object_2.go  model_inline_object_3.go  model_inline_object_4.go  model_inline_object_5.go  model_interval.go  model_interval_list.go  model_job.go  model_metadata.go  model_query_comment.go  model_query_list.go  model_record_job_status.go  model_record_revision.go  model_role.go  model_site.go  model_study.go  model_user.go  model_variable.go  pom.xml  response.go  utils.go
.github/workflows/: _client-gen.yml  api-docs-and-java.yml  api-docs.yml  build-docs.yml  deploy-api-docs.yml  generate-clients.yml  openapi-auto.yml  openapi-generate.yml  openapi-imednet-postman.yml  openapi-imednet.yml  openapi-staging-autofix.yml  openapi-veeva.yml  validate-openapi.yml
R/: api_client.R  coding_list.R  components_schemas_interval_forms_item.R  components_schemas_metadata_error.R  components_schemas_record_create_request_item.R  forms_api.R  inline_object3.R  inline_object5.R  interval_list.R  intervals_api.R  job.R  jobs_api.R  pagination.R  query.R  record.R  record_revisions_api.R  role.R  site_list.R  sites_api.R  sort.R  studies_api.R  study.R  study_list.R  subject.R  subject_list.R  variable.R  visit_list.R  visits_api.R
api/: IntervalsAPI.c  JobsAPI.h  QueriesAPI.h  RecordRevisionsAPI.c  RecordRevisionsAPI.h  SitesAPI.c  SubjectsAPI.h  VariablesAPI.c  VisitsAPI.h  openapi.yaml
client/c/: README.md
client/go/: README.md  api_codings.go  api_forms.go  api_intervals.go  api_records.go  api_subjects.go  api_variables.go  api_visits.go  client.go  model_coding.go  model_coding_list.go  model_components_schemas_metadata_error.go  model_inline_object.go  model_keyword.go  model_pagination.go  model_query.go  model_record.go  (+11 more)
client/rust/: Cargo.toml  README.md
client/rust/.openapi-generator/: FILES
client/rust/docs/: AdministrationApi.md  CodingList.md  CodingsApi.md  FormList.md  FormsApi.md  InlineObject1.md  Job.md  Metadata.md  Pagination.md  QueriesApi.md  RecordJobStatus.md  RecordList.md  RecordRevisionList.md  RecordRevisionsApi.md  RecordsApi.md  Role.md  Site.md  SiteList.md  SitesApi.md  StudyList.md  SubjectList.md  SubjectsApi.md  VariableList.md  VariablesApi.md  Visit.md  VisitList.md  VisitsApi.md
client/rust/src/apis/: administration_api.rs  codings_api.rs  configuration.rs  forms_api.rs  mod.rs  queries_api.rs  sites_api.rs  studies_api.rs  subjects_api.rs
client/rust/src/models/: coding_list.rs  components_schemas_interval_forms_item.rs  form.rs  form_list.rs  inline_object_1.rs  inline_object_3.rs  inline_object_4.rs  inline_object_5.rs  interval.rs  interval_list.rs  keyword.rs  metadata.rs  mod.rs  pagination.rs  query.rs  record_revision.rs  record_revision_list.rs  role.rs  site.rs  study.rs  user.rs  variable.rs
docs/: AdministrationAPI.md  AdministrationApi.md  Coding.md  CodingList.md  CodingsAPI.md  CodingsApi.md  ComponentsSchemasIntervalFormsItem.md  ComponentsSchemasMetadataError.md  ComponentsSchemasRecordCreateRequestItem.md  Form.md  FormList.md  FormsAPI.md  FormsApi.md  InlineObject.md  InlineObject1.md  InlineObject2.md  InlineObject3.md  InlineObject4.md  InlineObject5.md  Interval.md  IntervalList.md  IntervalsAPI.md  IntervalsApi.md  Job.md  JobsAPI.md  JobsApi.md  Keyword.md  Metadata.md  Pagination.md  QueriesAPI.md  QueriesApi.md  Query.md  QueryComment.md  QueryList.md  Record.md  RecordJobStatus.md  RecordList.md  RecordRevision.md  RecordRevisionList.md  RecordRevisionsAPI.md  (+43 more)
imednet/: imednet.postman_collection.json  openapi.yaml
include/: apiClient.h
lib/: openapi_client.rb
model/: coding.c  coding.h  components_schemas_interval_forms_item.h  components_schemas_metadata_error.c  components_schemas_metadata_error.h  components_schemas_record_create_request_item.c  components_schemas_record_create_request_item.h  form.h  form_list.c  form_list.h  inline_object.c  inline_object_1.c  inline_object_1.h  inline_object_2.c  inline_object_2.h  inline_object_4.h  inline_object_5.c  interval.c  interval.h  job.c  job.h  keyword.c  metadata.c  pagination.h  query_list.h  record_job_status.c  record_job_status.h  record_list.c  record_revision.h  record_revision_list.h  site.c  sort.c  sort.h  study.c  study.h  study_list.h  subject.c  subject.h  user.c  user.h  (+3 more)
openapi_client/: api_client.py  rest.py
spec/: openapi.yaml  v2.yaml  veeva.yaml
src/: ApiClient.js  apiClient.c
test/: api_forms_test.go  api_intervals_test.go  api_jobs_test.go  api_queries_test.go  api_variables_test.go  api_visits_test.go  test_administration_api.py  test_coding.py  test_coding_list.py  test_codings_api.py  test_components_schemas_interval_forms_item.py  test_components_schemas_metadata_error.py  test_forms_api.py  test_inline_object.py  test_inline_object1.py  test_inline_object2.py  test_inline_object3.py  test_inline_object4.py  test_inline_object5.py  test_keyword.py  test_queries_api.py  test_query_comment.py  test_query_list.py  test_record.py  test_record_revisions_api.py  test_records_api.py  test_site.py  test_study.py  test_subjects_api.py  test_user.py  test_user_list.py  test_variable.py  test_variable_list.py  test_visits_api.py
unit-test/: test_coding_list.c  test_components_schemas_interval_forms_item.c  test_components_schemas_record_create_request_item.c  test_form_list.c  test_inline_object.c  test_inline_object_1.c  test_interval_list.c  test_metadata.c  test_query_list.c  test_record_revision.c  test_role.c  test_site.c  test_sort.c  test_study.c  test_subject_list.c  test_user_list.c  test_variable_list.c
veeva_vault/: Veeva Vault API v25.1.postman_collection.json  Veeva_Vault_API_v25.1.openapi.yaml  openapi.yaml
(+1029 files in other folders)
